crates/uitest/fixtures/ty_check/match_.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/match_.fe
---
error[8-0000]: type mismatch
   ┌─ match_.fe:22:17
   │
22 │                 x
   │                 ^ expected `i32`, but `E` is given


